[tool.poetry]
name = "flask_gemini"
version = "0.0.1"
description = "A simple example to generate content using Google Gemini"
authors = [
    "Restack Team <service@restack.io>",
]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.9"
pydantic = "^2.9.2"
restack-ai = "^0.0.25"
restack-google-gemini = "^0.0.25"
fastapi = "^0.115.4"
click = "^8.1.7"
anyio = "^4.6.2.post1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
services = "src.services:run_services"
app = "src.app:run_app"
