[tool.poetry]
name = "fastapi_togetherai_llamaindex"
version = "0.0.1"
description = "A simple example showcasing fastapi, togetherai and llamaindex"
authors = [
    "Restack Team <service@restack.io>",
]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.115.4"
llama-index = "^0.11.22"
llama-index-llms-together = "^0.2.0"
uvicorn = "^0.32.0"
python-dotenv = "0.19"
restack-ai = "^0.0.28"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
services = "src.services:run_services"
app = "src.app:run_app"
