[tool.poetry]
name = "example-streamlit"
version = "0.0.1"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
restack-ai = "^0.0.25"
streamlit = "^1.39.0"
blinker = "^1.8.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
